updating tracing code for devphotodraw

--- a/analysis/step5_tracing_evaluation/step1_render_highres_tracings/calculate_shape_spatial-devphotodraw.ipynb
+++ b/analysis/step5_tracing_evaluation/step1_render_highres_tracings/calculate_shape_spatial-devphotodraw.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 19,
    "metadata": {
     "collapsed": true
    },
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 20,
    "metadata": {
     "collapsed": true
    },
@@ -62,7 +62,7 @@
     "iteration_name = 'all_tracings'\n",
     "\n",
     "ref_dir = os.path.join(analysis_dir, 'tracing_ref_400')\n",
-    "data_dir = os.path.join(analysis_dir, 'all_tracings')\n",
+    "data_dir = os.path.join(analysis_dir, 'all_tracings_june_2021')\n",
     "\n",
     "loss = 'ncc'\n",
     "trans_dir = os.path.join(analysis_dir, 'transformed_{}'.format(loss)) # store transformed images\n",
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 21,
    "metadata": {
     "collapsed": true
    },
@@ -108,8 +108,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
+   "execution_count": 22,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "really_run_this = 1\n",
@@ -127,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -137,7 +139,7 @@
        " '/Users/brialong/Documents/GitHub/devphotodraw/analysis/step5_tracing_evaluation/step1_render_highres_tracings/tracing_ref_400/shape_ref.png']"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -159,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 24,
    "metadata": {
     "collapsed": true
    },
@@ -186,8 +188,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {},
+   "execution_count": 25,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# d = 'Tsinghua_photodraw_production1575443112866_shape.png'\n",
@@ -198,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -508,213 +512,7 @@
       "getting tracing for 46 of 249 for shape\n",
       "getting tracing for 47 of 249 for shape\n",
       "getting tracing for 48 of 249 for shape\n",
-      "getting tracing for 49 of 249 for shape\n",
-      "getting tracing for 50 of 249 for shape\n",
-      "getting tracing for 51 of 249 for shape\n",
-      "getting tracing for 52 of 249 for shape\n",
-      "getting tracing for 53 of 249 for shape\n",
-      "getting tracing for 54 of 249 for shape\n",
-      "getting tracing for 55 of 249 for shape\n",
-      "getting tracing for 56 of 249 for shape\n",
-      "getting tracing for 57 of 249 for shape\n",
-      "getting tracing for 58 of 249 for shape\n",
-      "getting tracing for 59 of 249 for shape\n",
-      "getting tracing for 60 of 249 for shape\n",
-      "getting tracing for 61 of 249 for shape\n",
-      "getting tracing for 62 of 249 for shape\n",
-      "getting tracing for 63 of 249 for shape\n",
-      "getting tracing for 64 of 249 for shape\n",
-      "getting tracing for 65 of 249 for shape\n",
-      "getting tracing for 66 of 249 for shape\n",
-      "getting tracing for 67 of 249 for shape\n",
-      "getting tracing for 68 of 249 for shape\n",
-      "getting tracing for 69 of 249 for shape\n",
-      "getting tracing for 70 of 249 for shape\n",
-      "getting tracing for 71 of 249 for shape\n",
-      "getting tracing for 72 of 249 for shape\n",
-      "getting tracing for 73 of 249 for shape\n",
-      "getting tracing for 74 of 249 for shape\n",
-      "getting tracing for 75 of 249 for shape\n",
-      "getting tracing for 76 of 249 for shape\n",
-      "getting tracing for 77 of 249 for shape\n",
-      "getting tracing for 78 of 249 for shape\n",
-      "getting tracing for 79 of 249 for shape\n",
-      "getting tracing for 80 of 249 for shape\n",
-      "getting tracing for 81 of 249 for shape\n",
-      "getting tracing for 82 of 249 for shape\n",
-      "getting tracing for 83 of 249 for shape\n",
-      "getting tracing for 84 of 249 for shape\n",
-      "getting tracing for 85 of 249 for shape\n",
-      "getting tracing for 86 of 249 for shape\n",
-      "getting tracing for 87 of 249 for shape\n",
-      "getting tracing for 88 of 249 for shape\n",
-      "getting tracing for 89 of 249 for shape\n",
-      "getting tracing for 90 of 249 for shape\n",
-      "getting tracing for 91 of 249 for shape\n",
-      "getting tracing for 92 of 249 for shape\n",
-      "getting tracing for 93 of 249 for shape\n",
-      "getting tracing for 94 of 249 for shape\n",
-      "getting tracing for 95 of 249 for shape\n",
-      "getting tracing for 96 of 249 for shape\n",
-      "getting tracing for 97 of 249 for shape\n",
-      "getting tracing for 98 of 249 for shape\n",
-      "getting tracing for 99 of 249 for shape\n",
-      "getting tracing for 100 of 249 for shape\n",
-      "getting tracing for 101 of 249 for shape\n",
-      "getting tracing for 102 of 249 for shape\n",
-      "getting tracing for 103 of 249 for shape\n",
-      "getting tracing for 104 of 249 for shape\n",
-      "getting tracing for 105 of 249 for shape\n",
-      "getting tracing for 106 of 249 for shape\n",
-      "getting tracing for 107 of 249 for shape\n",
-      "getting tracing for 108 of 249 for shape\n",
-      "getting tracing for 109 of 249 for shape\n",
-      "getting tracing for 110 of 249 for shape\n",
-      "getting tracing for 111 of 249 for shape\n",
-      "getting tracing for 112 of 249 for shape\n",
-      "getting tracing for 113 of 249 for shape\n",
-      "getting tracing for 114 of 249 for shape\n",
-      "getting tracing for 115 of 249 for shape\n",
-      "getting tracing for 116 of 249 for shape\n",
-      "getting tracing for 117 of 249 for shape\n",
-      "getting tracing for 118 of 249 for shape\n",
-      "getting tracing for 119 of 249 for shape\n",
-      "getting tracing for 120 of 249 for shape\n",
-      "getting tracing for 121 of 249 for shape\n",
-      "getting tracing for 122 of 249 for shape\n",
-      "getting tracing for 123 of 249 for shape\n",
-      "getting tracing for 124 of 249 for shape\n",
-      "getting tracing for 125 of 249 for shape\n",
-      "getting tracing for 126 of 249 for shape\n",
-      "getting tracing for 127 of 249 for shape\n",
-      "getting tracing for 128 of 249 for shape\n",
-      "getting tracing for 129 of 249 for shape\n",
-      "getting tracing for 130 of 249 for shape\n",
-      "getting tracing for 131 of 249 for shape\n",
-      "getting tracing for 132 of 249 for shape\n",
-      "getting tracing for 133 of 249 for shape\n",
-      "getting tracing for 134 of 249 for shape\n",
-      "getting tracing for 135 of 249 for shape\n",
-      "getting tracing for 136 of 249 for shape\n",
-      "getting tracing for 137 of 249 for shape\n",
-      "getting tracing for 138 of 249 for shape\n",
-      "getting tracing for 139 of 249 for shape\n",
-      "getting tracing for 140 of 249 for shape\n",
-      "getting tracing for 141 of 249 for shape\n",
-      "getting tracing for 142 of 249 for shape\n",
-      "getting tracing for 143 of 249 for shape\n",
-      "getting tracing for 144 of 249 for shape\n",
-      "getting tracing for 145 of 249 for shape\n",
-      "getting tracing for 146 of 249 for shape\n",
-      "getting tracing for 147 of 249 for shape\n",
-      "getting tracing for 148 of 249 for shape\n",
-      "getting tracing for 149 of 249 for shape\n",
-      "getting tracing for 150 of 249 for shape\n",
-      "getting tracing for 151 of 249 for shape\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "getting tracing for 152 of 249 for shape\n",
-      "getting tracing for 153 of 249 for shape\n",
-      "getting tracing for 154 of 249 for shape\n",
-      "getting tracing for 155 of 249 for shape\n",
-      "getting tracing for 156 of 249 for shape\n",
-      "getting tracing for 157 of 249 for shape\n",
-      "getting tracing for 158 of 249 for shape\n",
-      "getting tracing for 159 of 249 for shape\n",
-      "getting tracing for 160 of 249 for shape\n",
-      "getting tracing for 161 of 249 for shape\n",
-      "getting tracing for 162 of 249 for shape\n",
-      "getting tracing for 163 of 249 for shape\n",
-      "getting tracing for 164 of 249 for shape\n",
-      "getting tracing for 165 of 249 for shape\n",
-      "getting tracing for 166 of 249 for shape\n",
-      "getting tracing for 167 of 249 for shape\n",
-      "getting tracing for 168 of 249 for shape\n",
-      "getting tracing for 169 of 249 for shape\n",
-      "getting tracing for 170 of 249 for shape\n",
-      "getting tracing for 171 of 249 for shape\n",
-      "getting tracing for 172 of 249 for shape\n",
-      "getting tracing for 173 of 249 for shape\n",
-      "getting tracing for 174 of 249 for shape\n",
-      "getting tracing for 175 of 249 for shape\n",
-      "getting tracing for 176 of 249 for shape\n",
-      "getting tracing for 177 of 249 for shape\n",
-      "getting tracing for 178 of 249 for shape\n",
-      "getting tracing for 179 of 249 for shape\n",
-      "getting tracing for 180 of 249 for shape\n",
-      "getting tracing for 181 of 249 for shape\n",
-      "getting tracing for 182 of 249 for shape\n",
-      "getting tracing for 183 of 249 for shape\n",
-      "getting tracing for 184 of 249 for shape\n",
-      "getting tracing for 185 of 249 for shape\n",
-      "getting tracing for 186 of 249 for shape\n",
-      "getting tracing for 187 of 249 for shape\n",
-      "getting tracing for 188 of 249 for shape\n",
-      "getting tracing for 189 of 249 for shape\n",
-      "getting tracing for 190 of 249 for shape\n",
-      "getting tracing for 191 of 249 for shape\n",
-      "getting tracing for 192 of 249 for shape\n",
-      "getting tracing for 193 of 249 for shape\n",
-      "getting tracing for 194 of 249 for shape\n",
-      "getting tracing for 195 of 249 for shape\n",
-      "getting tracing for 196 of 249 for shape\n",
-      "getting tracing for 197 of 249 for shape\n",
-      "getting tracing for 198 of 249 for shape\n",
-      "getting tracing for 199 of 249 for shape\n",
-      "getting tracing for 200 of 249 for shape\n",
-      "getting tracing for 201 of 249 for shape\n",
-      "getting tracing for 202 of 249 for shape\n",
-      "getting tracing for 203 of 249 for shape\n",
-      "getting tracing for 204 of 249 for shape\n",
-      "getting tracing for 205 of 249 for shape\n",
-      "getting tracing for 206 of 249 for shape\n",
-      "getting tracing for 207 of 249 for shape\n",
-      "getting tracing for 208 of 249 for shape\n",
-      "getting tracing for 209 of 249 for shape\n",
-      "getting tracing for 210 of 249 for shape\n",
-      "getting tracing for 211 of 249 for shape\n",
-      "getting tracing for 212 of 249 for shape\n",
-      "getting tracing for 213 of 249 for shape\n",
-      "getting tracing for 214 of 249 for shape\n",
-      "getting tracing for 215 of 249 for shape\n",
-      "getting tracing for 216 of 249 for shape\n",
-      "getting tracing for 217 of 249 for shape\n",
-      "getting tracing for 218 of 249 for shape\n",
-      "getting tracing for 219 of 249 for shape\n",
-      "getting tracing for 220 of 249 for shape\n",
-      "getting tracing for 221 of 249 for shape\n",
-      "getting tracing for 222 of 249 for shape\n",
-      "getting tracing for 223 of 249 for shape\n",
-      "getting tracing for 224 of 249 for shape\n",
-      "getting tracing for 225 of 249 for shape\n",
-      "getting tracing for 226 of 249 for shape\n",
-      "getting tracing for 227 of 249 for shape\n",
-      "getting tracing for 228 of 249 for shape\n",
-      "getting tracing for 229 of 249 for shape\n",
-      "getting tracing for 230 of 249 for shape\n",
-      "getting tracing for 231 of 249 for shape\n",
-      "getting tracing for 232 of 249 for shape\n",
-      "getting tracing for 233 of 249 for shape\n",
-      "getting tracing for 234 of 249 for shape\n",
-      "getting tracing for 235 of 249 for shape\n",
-      "getting tracing for 236 of 249 for shape\n",
-      "getting tracing for 237 of 249 for shape\n",
-      "getting tracing for 238 of 249 for shape\n",
-      "getting tracing for 239 of 249 for shape\n",
-      "getting tracing for 240 of 249 for shape\n",
-      "getting tracing for 241 of 249 for shape\n",
-      "getting tracing for 242 of 249 for shape\n",
-      "getting tracing for 243 of 249 for shape\n",
-      "getting tracing for 244 of 249 for shape\n",
-      "getting tracing for 245 of 249 for shape\n",
-      "getting tracing for 246 of 249 for shape\n",
-      "getting tracing for 247 of 249 for shape\n",
-      "getting tracing for 248 of 249 for shape\n",
-      "getting tracing for 249 of 249 for shape\n"
+      "getting tracing for 49 of 249 for shape\n"
      ]
     }
    ],
@@ -752,8 +550,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
-   "metadata": {},
+   "execution_count": 27,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "really_run_this = 1 \n",
@@ -769,7 +569,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   },
