--- a/analysis/step5_tracing_evaluation/step1_render_highres_tracings/pull_tracing_svg_400x400.ipynb
+++ b/analysis/step5_tracing_evaluation/step1_render_highres_tracings/pull_tracing_svg_400x400.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 12,
    "metadata": {
     "collapsed": true
    },
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 13,
    "metadata": {
     "collapsed": true
    },
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 16,
    "metadata": {
     "collapsed": true
    },
@@ -166,57 +166,36 @@
    "source": [
     "## And where are we rendering these sketches?\n",
     "analysis_dir = os.getcwd()\n",
-    "sketch_dir = os.path.join(analysis_dir,'all_tracings')\n",
+    "sketch_dir = os.path.join(analysis_dir,'all_tracings_june_2021')\n",
     "if not os.path.exists(sketch_dir):\n",
     "    os.makedirs(sketch_dir)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'CDM_CDM_photodraw_e21556311534736'"
-      ]
-     },
-     "execution_count": 87,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "s_full = 'CDM_' + s\n",
-    "s_full"
+    "# s_full = 'CDM_' + s\n",
+    "# s_full"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "u'square'"
-      ]
-     },
-     "execution_count": 96,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "category_short = imrec['category'].split(\"this \")[1]\n",
-    "category_short"
+    "# category_short = imrec['category'].split(\"this \")[1]\n",
+    "# category_short"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 19,
    "metadata": {
+    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
@@ -227,7 +206,7 @@
     "# canvas_size = 809\n",
     "# imsize = 400\n",
     "\n",
-    "canvas_size = 809\n",
+    "canvas_size = 696\n",
     "imsize = 400\n",
     "\n",
     "if really_run_this:\n",
