--- a/analysis/step5_tracing_evaluation/step1_render_highres_tracings/thu_couchdb_pull_tracing_svg_400x400.ipynb
+++ b/analysis/step5_tracing_evaluation/step1_render_highres_tracings/thu_couchdb_pull_tracing_svg_400x400.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 19,
    "metadata": {
     "collapsed": true
    },
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -57,7 +57,7 @@
        " u'update_seq': u'31383-g1AAAAFreJzLYWBg4MhgTmEQTM4vTc5ISXIwNDLXMwBCwxygFFMeC5BkeACk_gNBVhIDA78SQeUHIMrvg5Tz_SSofAFE-X6w6eoElTdAlM8HK7-CR3lSApBMqoe5uxafUgeQ0niYUmd8ShVASu1hSufgUZrIkCQPU6eaBQDytGKk'}"
       ]
      },
-     "execution_count": 121,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 21,
    "metadata": {
     "collapsed": true
    },
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -119,34 +119,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 23,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "analysis_dir = os.getcwd()\n",
-    "sketch_dir = os.path.join(analysis_dir,'all_tracings')"
+    "sketch_dir = os.path.join(analysis_dir,'all_tracings_june_2021')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "u'shape'"
-      ]
-     },
-     "execution_count": 125,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "imrec['category'].split(\"this \")[1]"
+    "# imrec['category'].split(\"this \")[1]"
    ]
   },
   {
@@ -158,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -307,7 +296,8 @@
     "# canvas_size = 809\n",
     "# imsize = 400\n",
     "\n",
-    "canvas_size = 809\n",
+    "# canvas_size = 809\n",
+    "canvas_size = 696\n",
     "imsize = 400\n",
     "\n",
     "if really_run_this:\n",
