Latest draft of manuscript, all sections complete

--- a/writing/references.bib
+++ b/writing/references.bib
@@ -6,6 +6,27 @@
 
 %% Saved with string encoding Unicode (UTF-8) 
 
+@article{yang2021visual,
+  title={Visual communication of object concepts at different levels of abstraction},
+  author={Yang, Justin and Fan, Judith E},
+  journal={arXiv preprint arXiv:2106.02775},
+  year={2021}
+}
+
+@article{simonyan2014very,
+  title={Very deep convolutional networks for large-scale image recognition},
+  author={Simonyan, Karen and Zisserman, Andrew},
+  journal={arXiv preprint arXiv:1409.1556},
+  year={2014}
+}
+
+@article{long2021parallel,
+  title={Parallel developmental changes in children's drawing and recognition of visual concepts},
+  author={Long, Bria and Fan, Judith and Chai, Zixian and Frank, Michael C},
+  year={2021},
+  publisher={PsyArXiv}
+}
+
 @article{winner1989can,
   title={How can Chinese children draw so well?},
   author={Winner, Ellen},
@@ -1677,4 +1698,18 @@
   year = {2019},
   note = {R package version 1.8-4},
   url = {https://CRAN.R-project.org/package=xtable},
+}
+@Manual{R-viridis,
+  title = {viridis: Default Color Maps from 'matplotlib'},
+  author = {Simon Garnier},
+  year = {2018},
+  note = {R package version 0.5.1},
+  url = {https://CRAN.R-project.org/package=viridis},
+}
+@Manual{R-viridisLite,
+  title = {viridisLite: Default Color Maps from 'matplotlib' (Lite Version)},
+  author = {Simon Garnier},
+  year = {2018},
+  note = {R package version 0.3.0},
+  url = {https://CRAN.R-project.org/package=viridisLite},
 }
